# plaster

./: .travis.yml  Cargo.toml  README.md
crates/plaster-forms/: .cargo_vcs_info.json  Cargo.toml  README.md
crates/plaster-forms/src/: fields.rs  lib.rs
crates/plaster-forms/src/fields/: big_checkbox.rs  checkbox.rs  file.rs  key_value.rs  select.rs  text.rs
crates/plaster-router/: Cargo.toml  README.md
crates/plaster-router-macro/: Cargo.toml  README.md
crates/plaster-router-macro/src/: lib.rs
crates/plaster-router-macro/tests/: basic_routes.rs
crates/plaster-router/src/: lib.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: lib.rs  main.rs
src/: app.rs  html.rs  lib.rs  macros.rs  prelude.rs  scheduler.rs
src/components/: select.rs
src/virtual_dom/: mod.rs  vcomp.rs  vlist.rs  vnode.rs  vtag.rs  vtext.rs
tests/: vcomp_test.rs  vlist_test.rs  vtag_test.rs  vtext_test.rs
