[package]
name = "plaster"
version = "0.2.5"
authors = ["Carlos Diaz-Padron <carlosdiazpadron@gmail.com>"]
repository = "https://github.com/carlosdp/plaster"
homepage = "https://github.com/carlosdp/plaster"
documentation = "https://docs.rs/plaster/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "webasm", "javascript"]
categories = ["gui", "web-programming"]
description = "A wasm-bindgen framework for making client-side single-page apps"

[dependencies]
log = "0.4"
wasm-bindgen = "0.2"
futures = "0.1"
wasm-bindgen-futures = "0.3"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "DomTokenList",
  "Element",
  "Event",
  "EventTarget",
  "FileList",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "MouseEvent",
  "PointerEvent",
  "KeyEvent",
  "KeyboardEvent",
  "MouseScrollEvent",
  "FocusEvent",
  "DragEvent",
  "InputEvent",
  "Node",
  "Text",
  "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
