[package]
name = "plaster-forms"
version = "0.1.12"
authors = ["Carlos Diaz-Padron <carlosdiazpadron@gmail.com>"]
repository = "https://github.com/carlosdp/plaster"
homepage = "https://github.com/carlosdp/plaster"
documentation = "https://docs.rs/plaster-forms/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "wasm", "javascript", "forms"]
categories = ["gui", "web-programming"]
description = "A form handler for front-end web applications."
edition = "2018"

[dependencies]
plaster = "0.2"
log = "0.4"

[dev-dependencies]
wasm-bindgen = "=0.2.40"
