[package]
name = "plaster-router-macro"
version = "0.1.0"
authors = ["Carlos Diaz-Padron <carlosdiazpadron@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full"] }
quote = "0.6"
proc-macro2 = "0.4"

[dev-dependencies]
plaster = { path = "../.." }
plaster-router = { path = "../plaster-router" }
