[package]
name = "plaster-router-macro"
version = "0.1.0"
authors = ["Carlos Diaz-Padron <carlosdiazpadron@gmail.com>"]
repository = "https://github.com/carlosdp/plaster"
homepage = "https://github.com/carlosdp/plaster"
documentation = "https://docs.rs/plaster-router-macro/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "wasm", "javascript", "router"]
categories = ["gui", "web-programming"]
description = "A custom derive helper for plaster-router"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full"] }
quote = "0.6"
proc-macro2 = "0.4"

[dev-dependencies]
plaster = { version = "0.1", path = "../.." }
plaster-router = { version = "0.1", path = "../plaster-router" }
