[package]
name = "plaster-router"
version = "0.1.0"
authors = ["Carlos Diaz-Padron <carlosdiazpadron@gmail.com>"]
edition = "2018"

[dependencies]
plaster = { path = "../.." }
plaster-router-macro = { path = "../plaster-router-macro" }
route-recognizer = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
log = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Event",
  "EventTarget",
  "History",
  "Location",
  "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
