[package]
name = "plaster-router"
version = "0.1.4"
authors = ["Carlos Diaz-Padron <carlosdiazpadron@gmail.com>"]
repository = "https://github.com/carlosdp/plaster"
homepage = "https://github.com/carlosdp/plaster"
documentation = "https://docs.rs/plaster-router/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "wasm", "javascript", "router"]
categories = ["gui", "web-programming"]
description = "A router for plaster-based frontend web applications"
edition = "2018"

[dependencies]
plaster = "0.2"
plaster-router-macro = { version = "0.1", path = "../plaster-router-macro" }
route-recognizer = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Event",
  "EventTarget",
  "History",
  "Location",
  "Window",
  "CustomEvent",
  "CustomEventInit"
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[features]
mobile = []
